html first design

--- a/index.html
+++ b/index.html
@@ -1,14 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./index.js"></script>
+    <script src="./index.js" type="module"></script>
 </head>
+
 <body>
-    
+     <header>
+        <div class="logo">
+            <img src="./assets/logo.png" alt="logo">
+        </div>
+        <nav class="links">
+            <ul>
+                <li><a href="#history">01. HISTORY</a></li>
+                <li><a href="#team">02. TEAM</a></li>
+            </ul>
+        </nav>
+    </header> 
+
+     <main>
+       <section class="main">
+            <div class="title">
+                <img src="./assets/img1.png" alt="title">
+            </div>
+            <div class="fondo">
+            <img src="./assets/fondoHeader.jpg" alt="fondo">
+            </div>
+        </section> 
+
+         <section class="history" id="history">
+            <nav class="nav">
+                <div class="logo">
+                    <img src="./assets/logo.png" alt="logo">
+                    <div class="title">
+                        <p>LOS ANGELES</p>
+                        <p>MOUNTAINS</p>
+                    </div>
+                </div>
+                <div class="links">
+                    <ul>
+                        <li>01. HISTORY</li>
+                        <li><a href="#team">02. TEAM</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <main>
+                <img src="./assets/peak.jpg" alt="background">
+                <div class="text">
+                    <div class="title">
+                        <h1>01</h1>
+                        <div class="subtitle">
+                            <p>HISTORY</p>
+                            <p class="p"></p>
+                        </div>
+                    </div>
+                    <div class="body">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin in ante viverra, rutrum erat
+                        rutrum, consectetur mi. Proin at maximus est. Nullam purus ex, iaculis sed erat sed, blandit
+                        tincidunt quam. Cras scelerisque id quam sed dignissim Pellentesque urna nunc, gravida quis
+                        hendrerit ac, tristique ut quam. Vivamus suscipit dignissim tortor nec congue.
+                    </div>
+                </div>
+                <div class="carousel">
+<div class="images">
+    <div >
+        <img src="./assets/carousel01.jpg" alt="img">
+    </div>
+    <div>
+        <img src="./assets/carousel02.jpg" alt="img">
+    </div><div >
+        <img src="./assets/carousel01.jpg" alt="img">
+    </div>
+    <div>
+        <img src="./assets/carousel02.jpg" alt="img">
+    </div>
+    <div>
+        <img src="./assets/carousel01.jpg" alt="img">
+    </div>
+    <div>
+        <img src="./assets/carousel02.jpg" alt="img">
+    </div>
+</div>
+                    <div class="dots">
+                        <span></span><span></span><span></span>
+                    </div>
+                </div>
+            </main>
+        </section> 
+
+    <section class="team" id="team">
+        <div class="title">
+            <h1>02</h1>
+            <div class="subtitle">
+                <p>CLIMB</p>
+                <p class="p"></p>
+            </div>
+            <div class="text">
+                Cras scelerisque id quam sed dignissim Pellentesque urna nunc, gravida quis hendrerit ac, tristique ut quam. Vivamus suscipit dignissim tortor nec congue. 
+            </div>
+        </div>
+        <div class="main">
+            <nav>
+                <a href="#" target="_blank" rel="noopener noreferrer">
+                    MOUNTAIN 1
+                </a>
+                <a href="#" target="_blank" rel="noopener noreferrer">
+                    MOUNTAIN 2
+                </a>
+            </nav>
+            <main>
+                <img src="./assets/teamBackground.jpg" alt="">
+                <div class="schedule">
+                    <h1>SCHEDULE</h1>
+                    <div class="dates">
+                        <div class="day">
+                            <p>25 Nov 2016</p>
+                            <p>28 Nov 2016</p>
+                            <p>18 Dec 2016</p>
+                            <p>7 Jan 2017</p>
+                        </div>
+                        <div class="destiny">
+                            <p>Vestibulum viverra</p>
+                            <p>Vestibulum viverra</p>
+                            <p>Vestibulum viverra</p>
+                            <p>Vestibulum viverra</p>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
+    </section>
+    </main>
+
 </body>
+
 </html>
