page secctions created

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-     <header>
+    <header>
         <div class="logo">
             <img src="./assets/logo.png" alt="logo">
         </div>
@@ -21,19 +21,14 @@
                 <li><a href="#team">02. TEAM</a></li>
             </ul>
         </nav>
-    </header> 
+    </header>
 
-     <main>
-       <section class="main">
-            <div class="title">
-                <img src="./assets/img1.png" alt="title">
-            </div>
-            <div class="fondo">
-            <img src="./assets/fondoHeader.jpg" alt="fondo">
-            </div>
-        </section> 
+    <main>
+        <section class="main">
+                <img src="./assets/main.jpg" alt="fondo">
+        </section>
 
-         <section class="history" id="history">
+        <section class="history" id="history">
             <nav class="nav">
                 <div class="logo">
                     <img src="./assets/logo.png" alt="logo">
@@ -56,7 +51,7 @@
                         <h1>01</h1>
                         <div class="subtitle">
                             <p>HISTORY</p>
-                            <p class="p"></p>
+                            <p class="dot"></p>
                         </div>
                     </div>
                     <div class="body">
@@ -67,74 +62,85 @@
                     </div>
                 </div>
                 <div class="carousel">
-<div class="images">
-    <div >
-        <img src="./assets/carousel01.jpg" alt="img">
-    </div>
-    <div>
-        <img src="./assets/carousel02.jpg" alt="img">
-    </div><div >
-        <img src="./assets/carousel01.jpg" alt="img">
-    </div>
-    <div>
-        <img src="./assets/carousel02.jpg" alt="img">
-    </div>
-    <div>
-        <img src="./assets/carousel01.jpg" alt="img">
-    </div>
-    <div>
-        <img src="./assets/carousel02.jpg" alt="img">
-    </div>
-</div>
+                    <div>
+                        <li>
+                            <img src="./assets/carousel02.jpg" alt="img">
+                        </li>
+                        <li>
+                            <img src="./assets/carousel01.jpg" alt="img">
+                        </li>
+                        <li>
+                            <img src="./assets/carousel02.jpg" alt="img">
+                        </li>
+                        <li>
+                            <img src="./assets/carousel01.jpg" alt="img">
+                        </li>
+                        <li>
+                            <img src="./assets/carousel02.jpg" alt="img">
+                        </li>
+                        <li>
+                            <img src="./assets/carousel01.jpg" alt="img">
+                        </li>
+                        <li>
+                            <img src="./assets/carousel02.jpg" alt="img">
+                        </li>
+                        <li>
+                            <img src="./assets/carousel01.jpg" alt="img">
+                        </li>
+                        <li>
+                            <img src="./assets/carousel02.jpg" alt="img">
+                        </li>
+                    </div>
                     <div class="dots">
                         <span></span><span></span><span></span>
                     </div>
                 </div>
             </main>
-        </section> 
+        </section>
 
-    <section class="team" id="team">
-        <div class="title">
-            <h1>02</h1>
-            <div class="subtitle">
-                <p>CLIMB</p>
-                <p class="p"></p>
+        <section class="team" id="team">
+            <div class="title">
+                <h1>02</h1>
+                <div class="subtitle">
+                    <p class="name">CLIMB</p>
+                    <p class="p"></p>
+                </div>
+                <div class="text">
+                    Cras scelerisque id quam sed dignissim Pellentesque urna nunc, gravida quis hendrerit ac, tristique
+                    ut quam. Vivamus suscipit dignissim tortor nec congue.
+                </div>
             </div>
-            <div class="text">
-                Cras scelerisque id quam sed dignissim Pellentesque urna nunc, gravida quis hendrerit ac, tristique ut quam. Vivamus suscipit dignissim tortor nec congue. 
-            </div>
-        </div>
-        <div class="main">
-            <nav>
-                <a href="#" target="_blank" rel="noopener noreferrer">
-                    MOUNTAIN 1
-                </a>
-                <a href="#" target="_blank" rel="noopener noreferrer">
-                    MOUNTAIN 2
-                </a>
-            </nav>
-            <main>
-                <img src="./assets/teamBackground.jpg" alt="">
-                <div class="schedule">
-                    <h1>SCHEDULE</h1>
-                    <div class="dates">
-                        <div class="day">
-                            <p>25 Nov 2016</p>
-                            <p>28 Nov 2016</p>
-                            <p>18 Dec 2016</p>
-                            <p>7 Jan 2017</p>
-                        </div>
-                        <div class="destiny">
-                            <p>Vestibulum viverra</p>
-                            <p>Vestibulum viverra</p>
-                            <p>Vestibulum viverra</p>
-                            <p>Vestibulum viverra</p>
+            <div class="main">
+                <nav>
+                    <a href="#" target="_blank" rel="noopener noreferrer">
+                        MOUNTAIN 1
+                    </a>
+                    <a href="#" target="_blank" rel="noopener noreferrer">
+                        MOUNTAIN 2
+                    </a>
+                </nav>
+                <main>
+                    <img src="./assets/teamBackground.jpg" alt="">
+                    <div class="schedule">
+                        <h1>SCHEDULE</h1>
+                        <div class="dates">
+                            <div class="day">
+                                <p>25 Nov 2016</p>
+                                <p>28 Nov 2016</p>
+                                <p>18 Dec 2016</p>
+                                <p>7 Jan 2017</p>
+                            </div>
+                            <div class="destiny">
+                                <p>Vestibulum viverra</p>
+                                <p>Vestibulum viverra</p>
+                                <p>Vestibulum viverra</p>
+                                <p>Vestibulum viverra</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </main>
-        </div>
-    </section>
+                </main>
+            </div>
+        </section>
     </main>
 
 </body>
