--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
             </div>
             <div class="main">
                 <nav>
-                    <a  rel="noopener noreferrer">
+                    <a id="mountain01" class="clicked" href="#mountain01" rel="noopener noreferrer">
                         MOUNTAIN 1
                     </a>
-                    <a  rel="noopener noreferrer">
+                    <a id="mountain02" href="#mountain02" rel="noopener noreferrer">
                         MOUNTAIN 2
                     </a>
                 </nav>
-                <main>
-                    <img src="./assets/teamBackground.jpg" alt="">
+                <main id="mountains">
+                    <img src="./assets/mountain01.jpg" alt="">
                     <div class="schedule">
                         <h1>SCHEDULE</h1>
                         <div class="dates">
