--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./style.css">
 
-                  <!-- Swiper JS -->
+    <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-    <script  type="module" src="./index.js" defer></script>
+    <script type="module" src="./index.js" defer></script>
 
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -29,11 +30,11 @@
 
     <main>
         <section class="main">
-        <picture>
-            <source media="(max-width: 420px)" srcset="./assets/main420.jpg">
-            <source media="(max-width: 800px)" srcset="./assets/main800.jpg">
-            <img src="./assets/main.jpg" alt="main logo">
-        </picture>
+            <picture>
+                <source media="(max-width: 420px)" srcset="./assets/main420.jpg">
+                <source media="(max-width: 800px)" srcset="./assets/main800.jpg">
+                <img src="./assets/main.jpg" alt="main logo">
+            </picture>
 
         </section>
 
@@ -74,30 +75,30 @@
                 <div class="carousel">
                     <div class="swiper mySwiper">
                         <div class="swiper-wrapper">
-                          <div class="swiper-slide"> 
-                            <img src="./assets/carousel02.jpg" alt="img">
-                            <img src="./assets/carousel01.jpg" alt="img">
-                            <img src="./assets/carousel02.jpg" alt="img">
-                            <img src="./assets/carousel01.jpg" alt="img">
-                          </div>
-                          <div class="swiper-slide">
-                            <img src="./assets/carousel01.jpg" alt="img">
-                            <img src="./assets/carousel02.jpg" alt="img">
-                            <img src="./assets/carousel01.jpg" alt="img">
-                            <img src="./assets/carousel02.jpg" alt="img">
-                          </div>
-                          <div class="swiper-slide">
-                            <img src="./assets/carousel02.jpg" alt="img">
-                            <img src="./assets/carousel01.jpg" alt="img">
-                            <img src="./assets/carousel02.jpg" alt="img">
-                            <img src="./assets/carousel01.jpg" alt="img">
-                          </div>
-                          
+                            <div class="swiper-slide">
+                                <img src="./assets/carousel02.jpg" alt="img">
+                                <img src="./assets/carousel01.jpg" alt="img">
+                                <img src="./assets/carousel02.jpg" alt="img">
+                                <img src="./assets/carousel01.jpg" alt="img">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./assets/carousel01.jpg" alt="img">
+                                <img src="./assets/carousel02.jpg" alt="img">
+                                <img src="./assets/carousel01.jpg" alt="img">
+                                <img src="./assets/carousel02.jpg" alt="img">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./assets/carousel02.jpg" alt="img">
+                                <img src="./assets/carousel01.jpg" alt="img">
+                                <img src="./assets/carousel02.jpg" alt="img">
+                                <img src="./assets/carousel01.jpg" alt="img">
+                            </div>
+
                         </div>
                     </div>
                     <div class="swiper-pagination"></div>
                 </div>
-              
+
             </main>
         </section>
 
@@ -145,6 +146,17 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="logo">
+            <img src="./assets/logo.png" alt="logo">
+            <div class="title">
+                <p>LOS ANGELES</p>
+                <p>MOUNTAINS</p>
+            </div>
+        </div>
+        <div class="copyright">
+            <h4>copyright 2016 all rights reserved</h4>
+        </div>
+    </footer>
 </body>
-
 </html>
